--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 h3 {
-	justify-content: center;
+	align-content: center;
 }
 
 .acknowledgements {
@@ -21,10 +21,12 @@ h3 {
 .container {
 	display: flex;
 	flex-direction: row;
-	text-align: left;
+	text-align: center;
 	flex-wrap: wrap;
 }
 
+
 .column {
 	width: 33.33%;
+	align-items: center;
 }
